edit database so have to edit query and struture
